Update Drug_discover .ipynb

--- a/Drug_discover .ipynb
+++ b/Drug_discover .ipynb
@@ -1969,7 +1969,7 @@
         "from rdkit.Chem import Draw\n",
         "\n",
         "# Set up Cohere API\n",
-        "cohere_api_key = \"OIgOnN9bV378w7IJyp68yTYH7XiGs3PpqJAKAhbI\"\n",
+        "cohere_api_key = \"your_api_key\"\n",
         "co = cohere.Client(cohere_api_key)\n",
         "\n",
         "# Define the columns of interest\n",
